--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
-  "checkTimeMinutes": 30,
-
   "daysToMessage": [0, 2],
-  "timeOfDayToMessage": 12,
+  "timeOfDayToMessage": 17,
   "url": "https://chat.fribyte.no",
-  "messages": ["Dugnad i morgen friBytere? :60fpsparrot:"]
+  "messages": [
+    "Dugnad i morgen friBytere? :60fpsparrot:",
+    "Dugnad i morgen mennesker og roboter?"
+  ]
 }
