--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,37 @@
-name: Build and deploy to production
-on: 
+# This workflow will build a .NET project
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
+
+name: Frontend Build and Push to DockerHub
+
+on:
   push:
-    branches: 
-      - main
+    branches: ["main"]
+
 jobs:
-  build:
-    name: Build
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Install Bun
-      run: |
-        curl -fsSL https://bun.sh/install | bash 
-    - name: Install dependencies
-      run: |
-        bun install
-    - name: Run the bot
-      run: |
-        bun run
-    - name: rsync files
-      uses: burnett01/rsync-deployments@5.2
-      with:
-        switches: -avzr --delete
-        path: /
-        remote_path: /home/fribyte/friBot
-        remote_host: ${{ secrets.HOST }}
-        remote_user: ${{ secrets.USERNAME }}
-        remote_key: ${{ secrets.KEY }}
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: fribyte/ctf-frontend
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend/
+          push: ${{ github.event_name == 'push' }}
+          tags: fribyte/ctf-frontend:latest
+          build-args: |
+            APP_BUILD_DATE=${{ github.event.repository.updated_at}}
