--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,13 +25,13 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: fribyte/ctf-frontend
+          images: fribyte/fribot
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: ./frontend/
           push: ${{ github.event_name == 'push' }}
-          tags: fribyte/ctf-frontend:latest
+          tags: fribyte/fribot:latest
           build-args: |
             APP_BUILD_DATE=${{ github.event.repository.updated_at}}
