--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: ./frontend/
+          context: .
           push: ${{ github.event_name == 'push' }}
           tags: fribyte/fribot:latest
           build-args: |
