--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "@mattermost/types": "^9.2.0",
+    "@types/node-cron": "^3.0.11"
   },
   "peerDependencies": {
     "typescript": "^4.3.0"
   },
   "dependencies": {
     "@mattermost/client": "^9.2.0",
-    "@mattermost/types": "^9.2.0",
     "node-cron": "^3.0.3"
   }
 }
