--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@mattermost/client": "^9.2.0",
+    "markdown-table": "^3.0.3",
     "node-cron": "^3.0.3"
   }
 }
